--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "renovate": "^34.76.0",
     "ts-node-test": "^0.3.0",
     "typescript": "^4.9.4"
+  },
+  "overrides": {
+    "json5": "^2.2.2"
   }
 }
